recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:4: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l.head == v)
        ^